<resources>
    <string name="app_name">Mahally</string>
    <string name="menu_drawer_open">Drawer open</string>
    <string name="menu_drawer_close">Drawer close</string>
    <string name="title_activity_test">test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="application_name">Mahally</string>
    <string name="blabla">POS System</string>
    <string name="produits">Produits</string>
    <string name="clients">Clients</string>
    <string name="paramètres">Parametres</string>
    <string name="fournisseurs">Fournisseurs</string>
    <string name="comptoir">Comptoir</string>
    <string name="sauvegarde_la_base_de_donne">Sauvegarde la base de données</string>
    <string name="restaurer_une_base_de_donne">Restaurer une base de données</string>
    <string name="permission_stockage_obligatiore">Permission de stockage obligatoire</string>
    <string name="backup_folder">PosBackup</string>
    <string name="devise_dapplication">DZD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>